[google_assistant] return pending instead of success

--- a/homeassistant/components/google_assistant/manifest.json
+++ b/homeassistant/components/google_assistant/manifest.json
@@ -5,5 +5,6 @@
   "codeowners": ["@home-assistant/cloud"],
   "dependencies": ["http"],
   "documentation": "https://www.home-assistant.io/integrations/google_assistant",
-  "iot_class": "cloud_push"
+  "iot_class": "cloud_push",
+  "version": "0.0.1"
 }
